# ProtoRelay

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  COPYING_BOOST.txt  Dockerfile  GENERIC_SERVER_README.md  LICENSE  README.md  README_zh.md  build.sh  smtps_test.sh
.github/workflows/: build-ubuntu24.yml  ci.yml
config/: db_config_distributed_example.json  db_config_example.json  generic_server_config.json  imapsConfig.json  router_config.json  server_example.json  smtpsConfig.json  smtpsConfig2.json  smtpsConfig_hdfs_web_example.json
config/sql/: create_tables.sql  create_tables_mail2.sql
deploy/config/: db_config.json  smtpsConfig_hdfs_web.json
deploy/config/sql/: create_tables.sql
deploy/launchd/: io.protorelay.server.plist
deploy/systemd/: protorelay.service
docker/: compose.hdfs-web.yml
docs/: ARCHITECTURE.md  PROJECT_STYLE.md  architecture-evolution.md  cross-compile-guide.md  docker-hdfs-web-guide.md  domain-deployment-guide.md  imap-cpu-busyloop-fix.md  imap-protocol-flow.md  imap-server-design.md  logging-completion.md  logging-guide.md  prepared-statement-connection-pool-issue.md  quick-log-config.md  service-deployment.md  sharding-refactor.md  smtp-outbound-client-design.md  vs-postfix.md
examples/: generic_server_example.cpp
include/mail_system/back/: logger.h
include/mail_system/back/algorithm/: smtp_utils.h  snow.h
include/mail_system/back/cli/: help_text.h
include/mail_system/back/common/: auth_cache.h  bcrypt.h  logger.h  lru_cache.h  mail_crypto.h
include/mail_system/back/db/: db_pool.h  db_service.h  distributed_mysql_pool.h  mysql_pool.h  mysql_service.h  null_db_pool.h  sql_queries.h
include/mail_system/back/entities/: mail.h
include/mail_system/back/inbound/: inbound_verifier.h
include/mail_system/back/mailServer/: hybrid_server.h  imaps_server.h  intrusion_detector.h  metrics_server.h  server_base.h  server_config.h  smtps_client.h  smtps_server.h
include/mail_system/back/mailServer/connection/: connection_base.h  i_connection.h  ssl_connection.h  tcp_connection.h
include/mail_system/back/mailServer/fsm/client/: client_fsm.hpp  smtps_client_fsm.hpp
include/mail_system/back/mailServer/fsm/imaps/: imaps_fsm.h  imaps_fsm.hpp  traditional_imaps_fsm.h  traditional_imaps_fsm.tpp
include/mail_system/back/mailServer/fsm/smtps/: smtps_fsm.h  smtps_fsm.hpp  traditional_smtps_fsm.h  traditional_smtps_fsm.tpp
include/mail_system/back/mailServer/session/: client_session.hpp  generic_session_base.h  imaps_session.h  imaps_session.tpp  session_base.h  smtps_session.h  smtps_session.tpp
include/mail_system/back/outbound/: cares_dns_resolver.h  dns_resolver.h  mx_routing_utils.h  outbound_config.h  outbound_utils.h  outbox_repository.h  smtp_outbound_client.h  smtp_outbound_transaction.h  smtp_transport_utils.h
include/mail_system/back/persist_storage/: persistent_queue.h
include/mail_system/back/router/: hash_shard_router.h  i_shard_router.h  static_shard_router.h  table_shard_router.h
include/mail_system/back/storage/: distributed_file_storage_provider.h  hdfs_web_storage_provider.h  i_storage_provider.h  local_file_storage_provider.h  null_storage_provider.h  s3_storage_provider.h  storage_config.h
include/mail_system/back/thread_pool/: boost_thread_pool.h  io_thread_pool.h  thread_pool_base.h
include/mail_system/back/version/: build_info.h.in
register-service/: cleanup.py  config.json  main.py  requirements.txt  schema.sql
scripts/: clear_mysql_mail_data.sh  generate_dkim_keys.sh  register_user.py
spam-detector/: config.json  main.py
src/: persistent_queue.cpp  smtp_utils.cpp
src/mail_system/back/algorithm/: smtp_utils.cpp  snow.cpp
src/mail_system/back/cli/: help_text.cpp
src/mail_system/back/common/: bcrypt.cpp
src/mail_system/back/db/: distributed_mysql_pool.cpp  mysql_pool.cpp  mysql_service.cpp  sql_queries.cpp
src/mail_system/back/inbound/: inbound_verifier.cpp
src/mail_system/back/mailServer/: server_base.cpp
src/mail_system/back/mailServer/fsm/imaps/: imaps_fsm.cpp  traditional_imaps_fsm.cpp
src/mail_system/back/mailServer/fsm/smtps/: traditional_smtps_fsm.cpp
src/mail_system/back/mailServer/imaps/: imaps_server.cpp
src/mail_system/back/mailServer/session/: imaps_session.cpp  session_base.cpp  smtps_session.cpp  test  test.cpp
src/mail_system/back/mailServer/smtps/: smtps_server.cpp
src/mail_system/back/outbound/: cares_dns_resolver.cpp  mx_routing_utils.cpp  outbound_utils.cpp  outbox_repository.cpp  smtp_outbound_client.cpp
src/mail_system/back/persist_storage/: persistent_queue.cpp
src/mail_system/back/router/: table_shard_router.cpp
src/mail_system/back/storage/: distributed_file_storage_provider.cpp  hdfs_web_storage_provider.cpp  local_file_storage_provider.cpp  s3_storage_provider.cpp
src/mail_system/back/thread_pool/: boost_thread_pool.cpp  io_thread_pool.cpp
test/: bench-report.md  cl.py  cleanup.sh  fsm_bench.cpp  hash_tool  hash_tool.cpp  imapsServer.cpp  imaps_test.cpp  mail_server_combined.cpp  mock_connection.h  query_mail.sql  smtp_client.cpp  smtpsServer.cpp  smtps_test.cpp  sql_queries_test.cpp  test_inbound_verifier.cpp
test/bench/: fsm_bench.cpp
test/unit/: imaps_fsm_test.cpp  mock_connection.h  mock_outbound_stream.h  outbound_smtp_bench.cpp  smtps_fsm_test.cpp
tools/: register_user.cpp
